Updated files for website

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -85,7 +85,7 @@ html, body {
 	margin: 0 0 5px 0;
 }
 #main {
-	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(images/main.png) no-repeat center center fixed;
+	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../images/main.png) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
