--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -86,25 +86,6 @@ body {
 #footer tr.second-row td p {
 	margin: 0 0 5px 0;
 }
-#popup {
-	background: rgba(0, 0, 0, 0.6);
-	height: 100%;
-	position: fixed;
-	width: 100%;
-}
-#popup > div {
-	background: white;
-	height: 200px;
-	left: 0;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: -100px;
-	position: fixed;
-	right: 0;
-	top: 50%;
-	width: 800px;
-	z-index: 1;
-}
 #main {
 	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../images/main.png) no-repeat center center fixed;
 	-webkit-background-size: cover;
@@ -159,7 +140,7 @@ body {
 	font-size: 40px;
 	font-weight: 100;
 	margin: 0;
-	padding: 20px 0 20px 0;
+	padding: 20px 0 25px 0;
 }
 .container h2 {
 	font-size: 24px;
@@ -171,6 +152,9 @@ body {
 	font-weight: 300;
 	margin: 0 0 20px 0;
 	text-transform: uppercase;
+}
+.container p {
+	margin-top: 0;
 }
 .container a {
 	color: rgb(154, 171, 203);
